# HM5

./: Makefile.am  README.md  configure.ac  main.c
headers/: header.h
src/: func.c
